// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot testing 1`] = `
<div
  class="WeatherItem-container"
>
  <h3 />
  <div
    class="WeatherItem-temperature"
  >
     -  ℃
  </div>
</div>
`;

exports[`snapshot testing 2`] = `
<div
  class="WeatherItem-container"
>
  <h3>
    Wednesday
  </h3>
  <div
    class="WeatherItem-temperature"
  >
    24.0 - 29.3 ℃
  </div>
</div>
`;
